--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!doctype html>
 <html class="grid" lang="is">
   <head>
+    <title>Forsida</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hópverkefni 1</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato|Merriweather" rel="stylesheet">
-    <link rel="stylesheet" href="styleguide.css">
-    <!-- <link rel="stylesheet" href="grid.css"> -->
     <link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="grid.css">
   </head>
   <body>
-  
+	<!--NAVIGATION START-->
+	
+	<!--NAVIGATION END-->
+<!--------------------------------------------------------->	
+	<!--HEADDER START-->
+
+	<!--HEADDER END-->
+<!--------------------------------------------------------->	
+	<!--CONTENT START-->
+	
+	<!--CONTENT END-->
+<!--------------------------------------------------------->	
+	<!--FOOTER START-->
+	
+	<!--FOOTER END-->
   </body>
 </html>
