--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
   <head>
     <title>Forsida</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="grid.css">
   </head>
   <body>
 	<!--NAVIGATION START-->
-	
+	<nav class="navigation">
+		<h1 class="navigation__title">Fooþjónustan</h1>
+		<div class="navigation__buttons">
+			 <button class="button">Um</button>
+			 <button class="button hidden">Kaupa</button>
+		</div>
+	</nav>
 	<!--NAVIGATION END-->
 <!--------------------------------------------------------->	
 	<!--HEADDER START-->
-
+	<header class="headder" name="viewport" content="width=device-width, initial-scale=1">
+		
+	</header>
 	<!--HEADDER END-->
 <!--------------------------------------------------------->	
 	<!--CONTENT START-->
