--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <title>Forsida</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
-	<link rel="stylesheet" href="grid.css">
+	<!--<link rel="stylesheet" href="grid.css">-->
   </head>
   <body>
 	<!--NAVIGATION START-->
 	<nav class="navigation">
 		<h1 class="navigation__title">Fooþjónustan</h1>
 		<div class="navigation__buttons">
-			 <button class="button">Um</button>
-			 <button class="button hidden">Kaupa</button>
+			 <button class="button button__extra_for_nav button__um">Um</button>
+			 <button class="button hidden button__extra_for_nav">Kaupa</button>
 		</div>
 	</nav>
 	<!--NAVIGATION END-->
 <!--------------------------------------------------------->	
 	<!--HEADDER START-->
 	<header class="headder" name="viewport" content="width=device-width, initial-scale=1">
-		
+		<button class="button hidden">Kaupa</button>
 	</header>
 	<!--HEADDER END-->
 <!--------------------------------------------------------->	
