--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Forsida</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab" rel="stylesheet">
 	<!--<link rel="stylesheet" href="grid.css">-->
   </head>
   <body>
