--- a/About.html
+++ b/About.html
@@ -1,32 +1,70 @@
 <!doctype html>
 <html class="grid" lang="is">
-  <head>
-    <title>Forsida</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
-	<link rel="stylesheet" href="grid.css">
-  </head>
-  <body>
-	<!--NAVIGATION START-->
-	<nav>
-		<h3>Hello</h3>
-	<nav>
-	<!--NAVIGATION END-->
-<!--------------------------------------------------------->	
-	<!--HEADDER START-->
-	<header name="viewport" content="width=device-width, initial-scale=1">
-		<div class="header_content">
-		
+
+<head>
+  <title>Forsida</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="grid.css">
+</head>
+
+<body>
+  <!--NAVIGATION START-->
+  <nav class="navigation">
+		<h1 class="navigation__title">Fooþjónustan</h1>
+		<div class="navigation__buttons">
+			 <button class="button button__extra_for_nav button__um">Um</button>
+			 <button class="button hidden button__extra_for_nav">Kaupa</button>
 		</div>
-	</header>
-	<!--HEADDER END-->
-<!--------------------------------------------------------->	
-	<!--CONTENT START-->
-	
-	<!--CONTENT END-->
-<!--------------------------------------------------------->	
-	<!--FOOTER START-->
-	
-	<!--FOOTER END-->
-  </body>
+	</nav>
+  <section class="about">
+    <h3>Hvað er Fooþjónustan?</h3>
+    <div class="about__wrapper">
+      <p class="about__text">Í hinum ódauðlegu orðum stofnanda okkar:</p>
+
+      <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris varius lorem sit amet diam faucibus, et lacinia metus tempus. Nam vulputate erat non aliquet ultrices. Curabitur at ligula sit amet purus dictum tempor. Morbi ultrices suscipit mi vehicula
+        viverra. Sed sit amet quam luctus tortor elementum iaculis. Sed pellentesque vel magna in condimentum. Pellentesque mollis, ante quis tristique rutrum, arcu elit fermentum enim, non rhoncus lacus lorem sagittis dolor. Suspendisse bibendum sapien
+        rutrum lorem rutrum eleifend. Ut interdum feugiat magna, ac lacinia orci gravida eget. Ut egestas, nulla aliquam commodo gravida, enim nisl congue lectus, eu maximus tortor neque at velit. Praesent nec nunc purus. Duis lacus quam, aliquet et nulla
+        sed, vestibulum interdum leo. Curabitur id ante et risus dictum maximus. Proin quis ligula tristique, hendrerit felis vel, ultrices tortor. Proin mattis lacus id aliquam maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
+        vel metus risus.
+      </p>
+      <div class="about__quote">
+        <blockquote>
+          <p class="about__text">„Aenean in purus vel leo pellentesque lacinia non ut magna. Sed eleifend tristique mollis.“</p>
+          <footer>— Foobarius Baz</footer>
+        </blockquote>
+      </div>
+      <p class="about__text">Donec efficitur ante scelerisque metus tempus aliquam. Etiam sit amet justo vulputate, ultricies ligula non, fringilla sapien. Mauris ut neque nec dui ullamcorper vulputate. Ut at suscipit est. Cras elementum tellus erat, quis dictum tellus efficitur
+        quis. Sed mollis fermentum massa, hendrerit vehicula nunc hendrerit sit amet. Donec vestibulum tortor nec enim lobortis placerat. Quisque faucibus volutpat consectetur. Nunc sed ipsum egestas, semper massa non, consequat felis. Nam pellentesque
+        sapien ipsum, et malesuada mi ultricies in. Donec consequat mattis consequat. Maecenas efficitur vehicula ultrices.
+      </p>
+
+      <p class="about__text">
+        Aenean in purus vel leo pellentesque lacinia non ut magna. Sed eleifend tristique mollis. Nam purus nisl, elementum eget vestibulum at, volutpat vitae diam. Proin vitae enim in elit condimentum fringilla. Quisque ullamcorper enim vel feugiat facilisis.
+        Fusce commodo hendrerit ex. Donec posuere, enim non vehicula placerat, metus enim blandit nisi, eu rhoncus nisl mi et justo. Curabitur ullamcorper nec magna eu dictum. Maecenas tincidunt sem odio, nec blandit dolor ultricies eu. Donec viverra
+        ipsum lobortis quam tincidunt lacinia. Aenean consectetur ut enim non lacinia. Proin sed interdum orci, et condimentum purus. Suspendisse vel erat sagittis, lobortis tortor vitae, pellentesque diam. Aenean fringilla elit id mi tincidunt tempus.
+      </p>
+    </div>
+  </section>
+
+
+  <!--NAVIGATION END-->
+  <!--------------------------------------------------------->
+  <!--HEADDER START-->
+  <header name="viewport" content="width=device-width, initial-scale=1">
+    <div class="header_content">
+
+    </div>
+  </header>
+  <!--HEADDER END-->
+  <!--------------------------------------------------------->
+  <!--CONTENT START-->
+
+  <!--CONTENT END-->
+  <!--------------------------------------------------------->
+  <!--FOOTER START-->
+
+  <!--FOOTER END-->
+</body>
+
 </html>
