--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
 	<!--NAVIGATION END-->
 <!--------------------------------------------------------->	
 	<!--HEADDER START-->
-	<header class="headder" name="viewport" content="width=device-width, initial-scale=1">
-		<button class="button hidden">Kaupa</button>
+	<header class="headder">
+		<div class="headder__content">
+		   <h3 class="headder__content__title">Um Fooþjónustuna</h3>
+		</div>
 	</header>
 	<!--HEADDER END-->
 <!--------------------------------------------------------->	
 	<!--CONTENT START-->
-	
+	<button class="button hidden">Kaupa</button>
 	<!--CONTENT END-->
 <!--------------------------------------------------------->	
 	<!--FOOTER START-->
