--- a/About.html
+++ b/About.html
@@ -1,23 +1,32 @@
 <!doctype html>
 <html class="grid" lang="is">
-
-<head>
-  <title>Forsida</title>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="grid.css">
-</head>
-
-<body>
-  <!--NAVIGATION START-->
-  <nav class="navigation">
+  <head>
+    <title>Forsida</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab" rel="stylesheet">
+	<!--<link rel="stylesheet" href="grid.css">-->
+  </head>
+  <body>
+	<!--NAVIGATION START-->
+	<nav class="navigation">
 		<h1 class="navigation__title">Fooþjónustan</h1>
 		<div class="navigation__buttons">
 			 <button class="button button__extra_for_nav button__um">Um</button>
 			 <button class="button hidden button__extra_for_nav">Kaupa</button>
 		</div>
 	</nav>
-  <section class="about">
+	<!--NAVIGATION END-->
+<!--------------------------------------------------------->	
+	<!--HEADDER START-->
+	<header class="headder">
+		<div class="headder__content">
+		   <h3 class="headder__content__title">Um Fooþjónustuna</h3>
+		</div>
+	</header>
+	<!--HEADDER END-->
+<!--------------------------------------------------------->	
+	<section class="about">
     <h3>Hvað er Fooþjónustan?</h3>
     <div class="about__wrapper">
       <p class="about__text">Í hinum ódauðlegu orðum stofnanda okkar:</p>
@@ -46,25 +55,5 @@
       </p>
     </div>
   </section>
-
-
-  <!--NAVIGATION END-->
-  <!--------------------------------------------------------->
-  <!--HEADDER START-->
-  <header name="viewport" content="width=device-width, initial-scale=1">
-    <div class="header_content">
-
-    </div>
-  </header>
-  <!--HEADDER END-->
-  <!--------------------------------------------------------->
-  <!--CONTENT START-->
-
-  <!--CONTENT END-->
-  <!--------------------------------------------------------->
-  <!--FOOTER START-->
-
-  <!--FOOTER END-->
-</body>
-
+  </body>
 </html>
