--- a/About.html
+++ b/About.html
@@ -4,6 +4,7 @@
     <title>Forsida</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="grid.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab" rel="stylesheet">
 	<!--<link rel="stylesheet" href="grid.css">-->
   </head>
@@ -17,7 +18,7 @@
 		</div>
 	</nav>
 	<!--NAVIGATION END-->
-<!--------------------------------------------------------->	
+<!--------------------------------------------------------->
 	<!--HEADDER START-->
 	<header class="headder">
 		<div class="headder__content">
@@ -25,9 +26,11 @@
 		</div>
 	</header>
 	<!--HEADDER END-->
-<!--------------------------------------------------------->	
+<!--------------------------------------------------------->
 	<section class="about">
+    <div class = "about__title">
     <h3>Hvað er Fooþjónustan?</h3>
+  </div>
     <div class="about__wrapper">
       <p class="about__text">Í hinum ódauðlegu orðum stofnanda okkar:</p>
 
@@ -37,13 +40,16 @@
         sed, vestibulum interdum leo. Curabitur id ante et risus dictum maximus. Proin quis ligula tristique, hendrerit felis vel, ultrices tortor. Proin mattis lacus id aliquam maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
         vel metus risus.
       </p>
+
       <div class="about__quote">
         <blockquote>
-          <p class="about__text">„Aenean in purus vel leo pellentesque lacinia non ut magna. Sed eleifend tristique mollis.“</p>
+          <p class="about__quoteText">„Aenean in purus vel leo pellentesque lacinia non ut magna. Sed eleifend tristique mollis.“</p>
           <footer>— Foobarius Baz</footer>
         </blockquote>
       </div>
-      <p class="about__text">Donec efficitur ante scelerisque metus tempus aliquam. Etiam sit amet justo vulputate, ultricies ligula non, fringilla sapien. Mauris ut neque nec dui ullamcorper vulputate. Ut at suscipit est. Cras elementum tellus erat, quis dictum tellus efficitur
+
+      <p class="about__text">
+        Donec efficitur ante scelerisque metus tempus aliquam. Etiam sit amet justo vulputate, ultricies ligula non, fringilla sapien. Mauris ut neque nec dui ullamcorper vulputate. Ut at suscipit est. Cras elementum tellus erat, quis dictum tellus efficitur
         quis. Sed mollis fermentum massa, hendrerit vehicula nunc hendrerit sit amet. Donec vestibulum tortor nec enim lobortis placerat. Quisque faucibus volutpat consectetur. Nunc sed ipsum egestas, semper massa non, consequat felis. Nam pellentesque
         sapien ipsum, et malesuada mi ultricies in. Donec consequat mattis consequat. Maecenas efficitur vehicula ultrices.
       </p>
