more additions to about page scss

--- a/About.html
+++ b/About.html
@@ -41,12 +41,12 @@
         vel metus risus.
       </p>
 
-      <div class="about__quote">
-        <blockquote>
+
+        <blockquote class="about__quote">
           <p class="about__quoteText">„Aenean in purus vel leo pellentesque lacinia non ut magna. Sed eleifend tristique mollis.“</p>
           <footer>— Foobarius Baz</footer>
         </blockquote>
-      </div>
+
 
       <p class="about__text">
         Donec efficitur ante scelerisque metus tempus aliquam. Etiam sit amet justo vulputate, ultricies ligula non, fringilla sapien. Mauris ut neque nec dui ullamcorper vulputate. Ut at suscipit est. Cras elementum tellus erat, quis dictum tellus efficitur
