Nav og header fyrir About og Kaupa eru 100% tilbuin

--- a/index.html
+++ b/index.html
@@ -12,26 +12,95 @@
 	<nav class="navigation">
 		<h1 class="navigation__title">Fooþjónustan</h1>
 		<div class="navigation__buttons">
-			 <button class="button button__extra_for_nav button__um">Um</button>
-			 <button class="button hidden button__extra_for_nav">Kaupa</button>
+			 <button class="button button__extra_for_nav button__um" onclick="window.location.href='about.html'">Um</button>
+			 <button class="button hidden button__extra_for_nav" onclick="window.location.href='kaupa.html'">Kaupa</button>
 		</div>
 	</nav>
 	<!--NAVIGATION END-->
-<!--------------------------------------------------------->	
+	
 	<!--HEADDER START-->
-	<header class="headder">
-		<div class="headder__content">
-		   <h3 class="headder__content__title">Um Fooþjónustuna</h3>
+	<header class="headder ">
+		<div class="headder__extra_index">
+			<div class="headder__extra_index__content">
+				<h1 class="headder__extra_index__content__display_1">Í fyrsta skipti á Íslandi</h1>
+				<h4 class="headder__extra_index__content__display_2">Fooþjónustan</h4>
+				<button class="button headder__extra_index__content__display_3" onclick="window.location.href='kaupa.html'">Kaupa</button>
+			</div>
 		</div>
 	</header>
-	<!--HEADDER END-->
-<!--------------------------------------------------------->	
-	<!--CONTENT START-->
-	<button class="button hidden">Kaupa</button>
-	<!--CONTENT END-->
-<!--------------------------------------------------------->	
-	<!--FOOTER START-->
+    <!--HEADDER END-->
 	
-	<!--FOOTER END-->
+	<!-- ALL ABOVE THIS COMMENT IS READY NO NEED TO ALTER -->
+	
+	
+	
+	<div class="page__grid">
+		<div class="page__grid__row">
+			<div class="page__grid__row__col-12 test">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+		</div>
+		<div class="page__grid__row">
+			<div class="page__grid__row__col-8 test">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+		</div>
+		
+		
+		<div class="page__grid__row">
+			<div class="page__grid__row__col-4 test">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+			<div class="page__grid__row__col-4 test2">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+			<div class="page__grid__row__col-4 test test3">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+		</div>
+		<div class="page__grid__row">
+			<div class="page__grid__row__col-4 test">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+			<div class="page__grid__row__col-4 test2">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+			<div class="page__grid__row__col-4 test test3">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+		</div><div class="page__grid__row">
+			<div class="page__grid__row__col-4 test">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+			<div class="page__grid__row__col-4 test2">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+			<div class="page__grid__row__col-4 test test3">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+		</div><div class="page__grid__row">
+			<div class="page__grid__row__col-4 test">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+			<div class="page__grid__row__col-4 test2">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+			<div class="page__grid__row__col-4 test test3">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+		</div><div class="page__grid__row">
+			<div class="page__grid__row__col-4 test">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+			<div class="page__grid__row__col-4 test2">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+			<div class="page__grid__row__col-4 test test3">
+			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
+			</div>
+		</div>
+		
+	</div>
+	
   </body>
 </html>
