--- a/kaupa.html
+++ b/kaupa.html
@@ -2,14 +2,31 @@
 <html class="grid" lang="is">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hópverkefni 1</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato|Merriweather" rel="stylesheet">
-    <link rel="stylesheet" href="styleguide.css">
-    <!-- <link rel="stylesheet" href="grid.css"> -->
+    <title>Kaupa</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+	<!-- <link rel="stylesheet" href="grid.css"> -->
   </head>
   <body>
+		<!--NAVIGATION START-->
+	    <nav class="navigation">
+			<h1 class="navigation__title">Fooþjónustan</h1>
+			<div class="navigation__buttons">
+				 <button class="button button__extra_for_nav button__um" onclick="window.location.href='about.html'">Um</button>
+				 <button class="button hidden button__extra_for_nav" onclick="window.location.href='kaupa.html'">Kaupa</button>
+			</div>
+		</nav>
+		<!--NAVIGATION END -->
+		
+		<!--HEADDER START-->
+		<header class="headder">
+			<div class="headder__content">
+				<h3 class="headder__content__title">Kaupa</h3>
+			</div>
+		</header>
+		<!--HEADDER END--->
+		
+		<!-- ALL ABOVE THIS COMMENT IS READY NO NEED TO ALTER -->
   
   </body>
 </html>
