--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="grid" lang="is">
   <head>
-    <title>Forsida</title>
+    <title>Um</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab" rel="stylesheet">
@@ -12,12 +12,12 @@
 	<nav class="navigation">
 		<h1 class="navigation__title">Fooþjónustan</h1>
 		<div class="navigation__buttons">
-			 <button class="button button__extra_for_nav button__um">Um</button>
-			 <button class="button hidden button__extra_for_nav">Kaupa</button>
+			 <button class="button button__extra_for_nav button__um" onclick="window.location.href='about.html'">Um</button>
+			 <button class="button hidden button__extra_for_nav" onclick="window.location.href='kaupa.html'">Kaupa</button>
 		</div>
 	</nav>
 	<!--NAVIGATION END-->
-<!--------------------------------------------------------->	
+	
 	<!--HEADDER START-->
 	<header class="headder">
 		<div class="headder__content">
@@ -25,7 +25,10 @@
 		</div>
 	</header>
 	<!--HEADDER END-->
-<!--------------------------------------------------------->	
+	
+	<!-- ALL ABOVE THIS COMMENT IS READY NO NEED TO ALTER -->
+	
+	
 	<section class="about">
     <h3>Hvað er Fooþjónustan?</h3>
     <div class="about__wrapper">
