patch fix a skjölum

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab" rel="stylesheet">
-	<!--<link rel="stylesheet" href="grid.css">-->
+	<link rel="stylesheet" href="grid.css">
   </head>
   <body>
 	<!--NAVIGATION START-->
@@ -19,7 +19,7 @@
 	<!--NAVIGATION END-->
 	
 	<!--HEADDER START-->
-	<header class="headder ">
+	<header class="headder">
 		<div class="headder__extra_index">
 			<div class="headder__extra_index__content">
 				<h1 class="headder__extra_index__content__display_1">Í fyrsta skipti á Íslandi</h1>
@@ -31,7 +31,6 @@
     <!--HEADDER END-->
 	
 	<!-- ALL ABOVE THIS COMMENT IS READY NO NEED TO ALTER -->
-	
 	
 	
 	<div class="page__grid">
