Nav og headder fyrir index/about/kaup 100% TILBUIÐ

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 	<header class="headder">
 		<div class="headder__extra_index">
 			<div class="headder__extra_index__content">
-				<h1 class="headder__extra_index__content__display_1">Í fyrsta skipti á Íslandi</h1>
-				<h4 class="headder__extra_index__content__display_2">Fooþjónustan</h4>
-				<button class="button headder__extra_index__content__display_3" onclick="window.location.href='kaupa.html'">Kaupa</button>
+				<h1 class="headder__extra_index__content__display_1 animation animation__one">Í fyrsta skipti á Íslandi</h1>
+				<h4 class="headder__extra_index__content__display_2 animation animation__two">Fooþjónustan</h4>
+				<button class="button headder__extra_index__content__display_3 animation animation__three" onclick="window.location.href='kaupa.html'">Kaupa</button>
 			</div>
 		</div>
 	</header>
