Nav,headder og Footer fyrir index/about/kaup 100% TILBUIÐ

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab" rel="stylesheet">
-	<link rel="stylesheet" href="grid.css">
+	<!--<link rel="stylesheet" href="grid.css">-->
   </head>
   <body>
 	<!--NAVIGATION START-->
@@ -101,5 +101,27 @@
 		
 	</div>
 	
+	
+	<!--EVERYTHING UNDER COMMENT IS READY NO NEED TO ALTER-->
+	<!--FOOTER START-->
+	<footer class="footer">
+		<div class="footer__info">
+			<div class="footer__info__address">
+				Fooþjónustan<br>
+				123-4567
+			</div>
+			<div class="footer__info__openhours">
+				Opið 12-13 alla daga<br>
+				Borgata 1 <br>
+				900 Foobar
+			</div>
+		</div>
+		<div class="footer__copywrite">
+			<div class="footer__copywrite__content">
+				©Fooþjónustan2017
+			</div>
+		</div>
+	</footer>
+	<!--FOOTER END-->
   </body>
 </html>
