--- a/kaupa.html
+++ b/kaupa.html
@@ -26,7 +26,28 @@
 		</header>
 		<!--HEADDER END--->
 		
-		<!-- ALL ABOVE THIS COMMENT IS READY NO NEED TO ALTER -->
+   <!-- ALL ABOVE THIS COMMENT IS READY NO NEED TO ALTER -->
   
+  <!--EVERYTHING UNDER COMMENT IS READY NO NEED TO ALTER-->
+  <!--FOOTER START-->
+  <footer class="footer">
+		<div class="footer__info">
+			<div class="footer__info__address">
+				Fooþjónustan<br>
+				123-4567
+			</div>
+			<div class="footer__info__openhours">
+				Opið 12-13 alla daga<br>
+				Borgata 1 <br>
+				900 Foobar
+			</div>
+		</div>
+		<div class="footer__copywrite">
+			<div class="footer__copywrite__content">
+				©Fooþjónustan2017
+			</div>
+		</div>
+	</footer>
+	<!--FOOTER END-->
   </body>
 </html>
