--- a/About.html
+++ b/About.html
@@ -69,5 +69,28 @@
       </p>
     </div>
   </section>
+  
+  
+  <!--EVERYTHING UNDER COMMENT IS READY NO NEED TO ALTER-->
+  <!--FOOTER START-->
+  <footer class="footer">
+		<div class="footer__info">
+			<div class="footer__info__address">
+				Fooþjónustan<br>
+				123-4567
+			</div>
+			<div class="footer__info__openhours">
+				Opið 12-13 alla daga<br>
+				Borgata 1 <br>
+				900 Foobar
+			</div>
+		</div>
+		<div class="footer__copywrite">
+			<div class="footer__copywrite__content">
+				©Fooþjónustan2017
+			</div>
+		</div>
+	</footer>
+	<!--FOOTER END-->
   </body>
 </html>
