--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab" rel="stylesheet">
-	<!--<link rel="stylesheet" href="grid.css">-->
+	<link rel="stylesheet" href="grid.css">
   </head>
   <body>
 	<!--NAVIGATION START-->
@@ -33,73 +33,7 @@
 	<!-- ALL ABOVE THIS COMMENT IS READY NO NEED TO ALTER -->
 	
 	
-	<div class="page__grid">
-		<div class="page__grid__row">
-			<div class="page__grid__row__col-12 test">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-		</div>
-		<div class="page__grid__row">
-			<div class="page__grid__row__col-8 test">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-		</div>
-		
-		
-		<div class="page__grid__row">
-			<div class="page__grid__row__col-4 test">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-			<div class="page__grid__row__col-4 test2">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-			<div class="page__grid__row__col-4 test test3">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-		</div>
-		<div class="page__grid__row">
-			<div class="page__grid__row__col-4 test">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-			<div class="page__grid__row__col-4 test2">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-			<div class="page__grid__row__col-4 test test3">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-		</div><div class="page__grid__row">
-			<div class="page__grid__row__col-4 test">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-			<div class="page__grid__row__col-4 test2">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-			<div class="page__grid__row__col-4 test test3">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-		</div><div class="page__grid__row">
-			<div class="page__grid__row__col-4 test">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-			<div class="page__grid__row__col-4 test2">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-			<div class="page__grid__row__col-4 test test3">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-		</div><div class="page__grid__row">
-			<div class="page__grid__row__col-4 test">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-			<div class="page__grid__row__col-4 test2">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-			<div class="page__grid__row__col-4 test test3">
-			wdwdwdwddwdwddwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwddwdwdwd
-			</div>
-		</div>
-		
-	</div>
+	
 	
 	
 	<!--EVERYTHING UNDER COMMENT IS READY NO NEED TO ALTER-->
