--- a/kaupa.html
+++ b/kaupa.html
@@ -5,7 +5,7 @@
     <title>Kaupa</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-	<!-- <link rel="stylesheet" href="grid.css"> -->
+	<link rel="stylesheet" href="grid.css">
   </head>
   <body>
 		<!--NAVIGATION START-->
@@ -27,7 +27,23 @@
 		<!--HEADDER END--->
 		
    <!-- ALL ABOVE THIS COMMENT IS READY NO NEED TO ALTER -->
-  
+   
+   <section class="main_content">
+		<form class="form_content">
+			<fieldset class="form_content__person">
+						<legend>Persónuupplýsingar</legend>
+						<label>Nafn:  <input type="text"></label><br>
+						<label>Netfang: <input type="email"> Frekari upplýsingar verða sendar á netfagn</label><br>
+			</fieldset>
+			<fieldset class="form_content__credinfo">
+						<legend>Persónuupplýsingar</legend>
+						<label>Nafn:  <input type="text"></label><br>
+						<label>Netfang: <input type="email"> Frekari upplýsingar verða sendar á netfagn</label><br>
+			</fieldset>
+		</form>
+		<button class="button main_content__button_extra">Panta</button>
+   </section>
+   
   <!--EVERYTHING UNDER COMMENT IS READY NO NEED TO ALTER-->
   <!--FOOTER START-->
   <footer class="footer">
