about page close to finished

--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="grid.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700i|Roboto+Slab:400,700" rel="stylesheet">
 	<!--<link rel="stylesheet" href="grid.css">-->
   </head>
   <body>
@@ -29,16 +29,15 @@
 	</header>
 	<!--HEADDER END-->
 
-	
+
 	<!-- ALL ABOVE THIS COMMENT IS READY NO NEED TO ALTER -->
-	
-	
+
+
 <!--------------------------------------------------------->
 
-	<section class="about">
-		<div class = "about__title">
-			<h3 >Hvað er Fooþjónustan?</h3>
-		</div>
+	<section class="about main_content">
+
+		<h3 class = "about__title">Hvað er Fooþjónustan?</h3>
     <div class="about__wrapper">
       <p class="about__text">Í hinum ódauðlegu orðum stofnanda okkar:</p>
 
@@ -69,8 +68,8 @@
       </p>
     </div>
   </section>
-  
-  
+
+
   <!--EVERYTHING UNDER COMMENT IS READY NO NEED TO ALTER-->
   <!--FOOTER START-->
   <footer class="footer">
