Added content to index.html

--- a/index.html
+++ b/index.html
@@ -1,61 +1,127 @@
 <!doctype html>
 <html class="grid" lang="is">
-  <head>
-    <title>Forsida</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700i|Roboto+Slab:400,700" rel="stylesheet">
-	<link rel="stylesheet" href="grid.css">
-  </head>
-  <body>
-	<!--NAVIGATION START-->
-	<nav class="navigation">
-		<h1 class="navigation__title">Fooþjónustan</h1>
-		<div class="navigation__buttons">
-			 <button class="button button__extra_for_nav button__um" onclick="window.location.href='about.html'">Um</button>
-			 <button class="button hidden button__extra_for_nav" onclick="window.location.href='kaupa.html'">Kaupa</button>
-		</div>
-	</nav>
-	<!--NAVIGATION END-->
-	
-	<!--HEADDER START-->
-	<header class="headder">
-		<div class="headder__extra_index">
-			<div class="headder__extra_index__content">
-				<h1 class="headder__extra_index__content__display_1 animation animation__one">Í fyrsta skipti á Íslandi</h1>
-				<h4 class="headder__extra_index__content__display_2 animation animation__two">Fooþjónustan</h4>
-				<button class="button headder__extra_index__content__display_3 animation animation__three" onclick="window.location.href='kaupa.html'">Kaupa</button>
-			</div>
-		</div>
-	</header>
-    <!--HEADDER END-->
-	
-	<!-- ALL ABOVE THIS COMMENT IS READY NO NEED TO ALTER -->
-	
-	
-	
-	
-	
-	<!--EVERYTHING UNDER COMMENT IS READY NO NEED TO ALTER-->
-	<!--FOOTER START-->
-	<footer class="footer">
-		<div class="footer__info">
-			<div class="footer__info__address">
-				Fooþjónustan<br>
-				123-4567
-			</div>
-			<div class="footer__info__openhours">
-				Opið 12-13 alla daga<br>
-				Borgata 1 <br>
-				900 Foobar
-			</div>
-		</div>
-		<div class="footer__copywrite">
-			<div class="footer__copywrite__content">
-				©Fooþjónustan2017
-			</div>
-		</div>
-	</footer>
-	<!--FOOTER END-->
-  </body>
+
+<head>
+  <title>Forsida</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700i|Roboto+Slab:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="grid.css">
+</head>
+
+<body>
+  <!--NAVIGATION START-->
+  <nav class="navigation">
+    <h1 class="navigation__title">Fooþjónustan</h1>
+    <div class="navigation__buttons">
+      <button class="button button__extra_for_nav button__um" onclick="window.location.href='about.html'">Um</button>
+      <button class="button hidden button__extra_for_nav" onclick="window.location.href='kaupa.html'">Kaupa</button>
+    </div>
+  </nav>
+  <!--NAVIGATION END-->
+
+  <!--HEADDER START-->
+  <header class="headder">
+    <div class="headder__extra_index">
+      <div class="headder__extra_index__content">
+        <h1 class="headder__extra_index__content__display_1 animation animation__one">Í fyrsta skipti á Íslandi</h1>
+        <h4 class="headder__extra_index__content__display_2 animation animation__two">Fooþjónustan</h4>
+        <button class="button headder__extra_index__content__display_3 animation animation__three" onclick="window.location.href='kaupa.html'">Kaupa</button>
+      </div>
+    </div>
+  </header>
+  <!--HEADDER END-->
+
+  <!-- ALL ABOVE THIS COMMENT IS READY NO NEED TO ALTER -->
+
+  <section class="FrontPage">
+
+    <div class="FrontPage__checkField">
+      <div class="FrontPage__checkBox">
+        <img src="img/check.svg">
+        <h3 class="FrontPage__checkBoxBigText">Ódýr og góð þjónusta</h3>
+        <p class="FrontPage__checkBoxText">Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.</p>
+      </div>
+
+      <div class="FrontPage__checkBox">
+        <img src="img/check.svg">
+        <h3 class="FrontPage__checkBoxBigText">Þægilegt í amstri dagsins</h3>
+        <p class="FrontPage__checkBoxText">Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.</p>
+      </div>
+
+      <div class="FrontPage__checkBox">
+        <img src="img/check.svg">
+        <h3 class="FrontPage__checkBoxBigText">Nauðsynlegt á hvert heimili</h3>
+        <p class="FrontPage__checkBoxText">Hvort sem er fyrir einstaklinga eða stórfjölskyldur.</p>
+      </div>
+      <div class="FrontPage__checkImageBox">
+        <img src="img/image.jpg">
+      </div>
+    </div>
+
+    <div class="FrontPage__usersBox">
+      <div class="FrontPage__userProfile">
+        <div class="FrontPage__userImage">
+          <img src="img/profile1.jpg">
+        </div>
+        <div class="FrontPage__userInfo">
+          <h3 class="FrontPage__userQuote">„Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“</h3>
+          <h4 class="FrontPage__userName">Anna Jóns</h4>
+          <p class="FrontPage__userLength">Áskrifandi í þrjá mánuði</p>
+        </div>
+      </div>
+
+      <div class="FrontPage__userProfile">
+        <div class="FrontPage__userImage">
+          <img src="img/profile2.jpg">
+        </div>
+        <div class="FrontPage__userInfo">
+          <h3 class="FrontPage__userQuote">„Vá, þetta breytir öllu!“</h3>
+          <h4 class="FrontPage__userName">Siggi Páls</h4>
+          <p class="FrontPage__userLength">Áskrifandi í tvo daga</p>
+        </div>
+      </div>
+
+      <div class="FrontPage__userProfile">
+        <div class="FrontPage__userImage">
+          <img src="img/profile3.jpg">
+        </div>
+        <div class="FrontPage__userInfo">
+          <h3 class="FrontPage__userQuote">„A+++, mun aldrei hætta í áskrift“</h3>
+          <h4 class="FrontPage__userName">Jón Guðrúnarson</h4>
+          <p class="FrontPage__userLength">Áskrifandi í ár</p>
+        </div>
+      </div>
+    </div>
+
+
+  </section>
+
+
+
+
+
+
+
+
+  <!--EVERYTHING UNDER COMMENT IS READY NO NEED TO ALTER-->
+  <!--FOOTER START-->
+  <footer class="footer">
+    <div class="footer__info">
+      <div class="footer__info__address">
+        Fooþjónustan<br> 123-4567
+      </div>
+      <div class="footer__info__openhours">
+        Opið 12-13 alla daga<br> Borgata 1 <br> 900 Foobar
+      </div>
+    </div>
+    <div class="footer__copywrite">
+      <div class="footer__copywrite__content">
+        ©Fooþjónustan2017
+      </div>
+    </div>
+  </footer>
+  <!--FOOTER END-->
+</body>
+
 </html>
