Index.html updated and scss added

--- a/index.html
+++ b/index.html
@@ -35,25 +35,38 @@
   <!-- ALL ABOVE THIS COMMENT IS READY NO NEED TO ALTER -->
 
   <section class="FrontPage">
-
-    <div class="FrontPage__checkField">
+    <div class = "FrontPage__checkField">
+    <div class="FrontPage__checkFieldText">
       <div class="FrontPage__checkBox">
+        <div class = "FrontPage__checkIcon">
         <img src="img/check.svg">
+      </div>
+      <div class = "FrontPage__checkText">
         <h3 class="FrontPage__checkBoxBigText">Ódýr og góð þjónusta</h3>
         <p class="FrontPage__checkBoxText">Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.</p>
       </div>
+    </div>
 
       <div class="FrontPage__checkBox">
+        <div class = "FrontPage__checkIcon">
         <img src="img/check.svg">
+      </div>
+      <div class = "FrontPage__checkText">
         <h3 class="FrontPage__checkBoxBigText">Þægilegt í amstri dagsins</h3>
         <p class="FrontPage__checkBoxText">Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.</p>
       </div>
+    </div>
 
       <div class="FrontPage__checkBox">
+        <div class = "FrontPage__checkIcon">
         <img src="img/check.svg">
+      </div>
+      <div class = "FrontPage__checkText">
         <h3 class="FrontPage__checkBoxBigText">Nauðsynlegt á hvert heimili</h3>
         <p class="FrontPage__checkBoxText">Hvort sem er fyrir einstaklinga eða stórfjölskyldur.</p>
       </div>
+    </div>
+    </div>
       <div class="FrontPage__checkImageBox">
         <img src="img/image.jpg">
       </div>
