lagfærði margin villur i kaupa.html

--- a/kaupa.html
+++ b/kaupa.html
@@ -79,8 +79,8 @@
 			</fieldset>
 		</form>
 		<!--------------------------Greiðsluupplýsingar------------------------------------------------------------------>
-		<div class="center_button_fo">
-			<button class="button panta_extra_button">Panta</button>
+		<div class="center_button_for_conent">
+		<button class="button panta_extra_button">Panta</button>
 		</div>
    </section>
   <!--EVERYTHING UNDER COMMENT IS READY NO NEED TO ALTER-->
